YAML/mtg-card-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mtg-card-sync
  namespace: mtg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mtg-card-sync
  template:
    metadata:
      labels:
        app: mtg-card-sync
    spec:
      containers:
      - name: mtg-card-sync
        image: harbor.home.virtualelephant.com/ve-lab/mtg-publisher:latest
        imagePullPolicy: Always
      restartPolicy: Always
