YAML/rabbitmq-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mtg-rabbitmq-ingress
  namespace: mtg
  annotations:
    ingress.class: "haproxy"
spec:
  rules:
  - host: mtg-rabbitmq.home.virtualelephant.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
